--- a/AdventureIntoMystery/adventureintomystery.html
+++ b/AdventureIntoMystery/adventureintomystery.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="adventureintomystery001.jpg"><br>
-8 issues 1956 -1957 Atlas, Marvel
+8 issues 1956 -1957 <a href="../AtlasComics/AtlasComics.html">Atlas Comics</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
