--- a/AdventuresIntoWeirdWorlds/adventuresintoweirdworlds.html
+++ b/AdventuresIntoWeirdWorlds/adventuresintoweirdworlds.html
@@ -10,7 +10,7 @@
 <body>
 <img src="adventuresintoweirdworlds01.jpg"> <br>
 Illustrator: Joe Maneely<br>
-Publisher: 1952-1954 Atlas<br>
+Publisher: 1952-1954 <a href="../AtlasComics/AtlasComics.html">Atlas Comics</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
