--- a/ApeEntertainment/ApeEntertainment.html
+++ b/ApeEntertainment/ApeEntertainment.html
@@ -19,7 +19,59 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="ApeComics1.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="ApeComics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics54.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
