--- a/AtlasComics/AtlasComics.html
+++ b/AtlasComics/AtlasComics.html
@@ -10,6 +10,98 @@
 <body>
 <img src="AtlasComics.jpg">
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="../ActualRomances/actualromances.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AdventureIntoMystery/adventureintomystery001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AdventuresIntoWeirdWorlds/adventuresintoweirdworlds01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../PinkyLee/PinkyLee1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AllTeen/AllTeen.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AllTrueCrime/AllTrueCrime1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AllTrueCrimeCases/AllTrueCrimeCases.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AllWinners/AllWinners.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AllWinners1941/AllWinners01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AnnieOakley/AnnieOakley1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../ApacheKid/ApacheKid.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../ArizonaKid/ArizonaKid.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Arrowhead/Arrowhead1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Astonishing/Astonishing03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AllWinners/BlackRider.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../BuckDuck/BuckDuck.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Combat/Combat.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../CombatCasey/CombatCasey.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../CombatKelly/CombatKelly.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../CommandoAdventures/CommandoAdventures1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../DevilDogDugan/DevilDogDugan1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../DexterTheDemon/DexterTheDemon.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AllWinners/GunsmokeWestern.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Hedy/Hedy22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../JannOfTheJungle/JannOfTheJungle.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Jeanie/Jeanie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Joker/joker001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../JungleAction/JungleAction001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Justice/Justice.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../LawbreakersAlwaysLose/LawbreakersAlwaysLose.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../LoveAdventures/loveadventures.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../DevilDogDugan/MarinesAtWar5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Menace/Menace1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../MyLove/MyLove.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../MysteryTales/MysteryTales1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Mystic/Mystic1940series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../MysticalTales/MysticalTales1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../NavyAction/NavyAction1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../NavyCombat/NavyCombat1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../NavyTales/NavyTales1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AllTrueCrimeCases/OfficialTCC.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../OurLove/OurLove.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../OutlawFighters/OutlawFighters1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../OutlawKid/OutlawKid1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../PrivateEye/PrivateEye1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WesternThrillers/QuickTrigger12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../RangelandLove/RangelandLove.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../RawhideKid/RawhideKid1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../RingoKid/RingoKid1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../RomanceDiary/RomanceDiary1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../RomanceTales/RomanceTales1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../RuggedAction/RuggedAction1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../SgtBarneyBarker/SgtBarneyBarker1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../SixGunWestern/SixGunWestern1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../SpaceAce/SpaceAce1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../SpaceSquadron/SpaceSquadron.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Spaceman/Spaceman1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Spellbound/Spellbound1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../StoriesOfRomance/StoriesOfRomance1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../StrangeStoriesOfSuspense/StrangeStoriesOfSuspense5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../StrangeTalesOfTheUnusual/StrangeTalesOfTheUnusual1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../StrangeWorldsAtlas/StrangeWorlds1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../DevilDogDugan/TalesOfTheMarines4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AllTeen/Teen22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../TessieTheTypist/TessieTheTypist1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../CompleteMystery/TrueCompleteMystery1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WarAction/WarAction.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WarAdventures/WarAdventures.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WarCombat/WarCombat.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WarComicsAtlas/WarComicsAtlas.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AllWinners/WesternTalesOfBlackRider.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WesternThrillers/WesternThrillers1948_01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AllWinners/WesternWinners.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Wild/Wild.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WildWest/WildWest.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WildWest/WildWestern.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WorldOfMystery/WorldOfMystery1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WorldOfSuspense/WorldOfSuspense1.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 Atlas Comics (1944 - 1957, approx 2365 issues) is the comic-book publishing label that evolved into Marvel Comics. Magazine and paperback novel publisher Martin Goodman, whose business strategy involved having a multitude of corporate entities, used Atlas as the umbrella name for his comic-book division during this time. Atlas evolved out of Goodman's 1940s comic-book division, Timely Comics, and was located on the 14th floor of the Empire State Building.
 </p><p>
 This company is distinct from the 1970s comic-book company, also founded by Goodman, that is known as Atlas/Seaboard Comics.
@@ -31,11 +123,11 @@ Atlas Comics was the successor of Timely Comics, the company that magazine and p
 <li><a href="../Arrowhead/Arrowhead.html">Arrowhead </a>  (1954)
 <li><a href="../Astonishing/Astonishing.html">Astonishing</a>     (1951)
 <li><a href="../AllWinners/AllWinners.html">Black Rider</a> (1948)
-<li><a href="../BuckDuck/BuckDuck.html">Buck Duck</a>(1993)
+<li><a href="../BuckDuck/BuckDuck.html">Buck Duck</a> (1993)
 <li><a href="../Combat/Combat.html">Combat</a>  (1952)
 <li><a href="../CombatCasey/CombatCasey.html">Combat Casey</a> (1952)
 <li><a href="../CombatKelly/CombatKelly.html">Combat Kelly</a> (1951)
-<li><a href="../CombatKelly/CombatKelly.html">Commando Adventures</a> (1957)
+<li><a href="../CommandoAdventures/CommandoAdventures.html">Commando Adventures</a> (1957)
 <li><a href="../DevilDogDugan/DevilDogDugan.html">Devil-Dog Dugan</a>     (1956)
 <li><a href="../DexterTheDemon/DexterTheDemon.html">Dexter the Demon</a>    (1957)
 <li><a href="../AllWinners/AllWinners.html">Gunsmoke Western</a>    (1948)
@@ -90,7 +182,7 @@ Atlas Comics was the successor of Timely Comics, the company that magazine and p
 <li><a href="../WarComicsAtlas/WarComicsAtlas.html">War Comics</a>    (1950)
 <li><a href="../AllWinners/AllWinners.html">Western Tales of Black Rider</a>    (1948)
 <li><a href="../WesternThrillers/WesternThrillers.html">Western Thrillers</a>   (1954)
-<li><a href="../AllWinners/AllWinners.html  ">Western Winners</a>     (1948)
+<li><a href="../AllWinners/AllWinners.html">Western Winners</a>     (1948)
 <li><a href="../Wild/Wild.html">Wild</a>    (1954)
 <li><a href="../WildWest/WildWest.html">Wild West</a>     (1948)
 <li><a href="../WildWest/WildWest.html">Wild Western</a>    (1948)
