--- a/ActualRomances/actualromances.html
+++ b/ActualRomances/actualromances.html
@@ -2,19 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Actual Romances</title>
 </head>
 
 <body>
-<h2>Actual Romances</h2>
-<img src="actualromances.jpg"> <img src="truesecrets.jpg"> <br>
-Series: #1-2 Actual Romances, #3-40 True Secrets<br>
-Publisher: 1949 to 1956 Atlas, Marvel</a> <br>
 <p>
-About: Continues as True Secrets<br>
+<img src="actualromances.jpg">
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="actualromances.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="truesecrets.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-Story: Boy meets girl<br>
+
+Series: #1-2 Actual Romances, #3-40 True Secrets<br>
+Publisher: 1949 to 1956 <a href="../AtlasComics/AtlasComics.html">Atlas Comics</a>, Marvel
+<p>
+About: Continues as True Secrets
+</p><p>
+Story: Boy meets girl
 
 </p>
 </body>
