--- a/AllTrueCrimeCases/AllTrueCrimeCases.html
+++ b/AllTrueCrimeCases/AllTrueCrimeCases.html
@@ -2,14 +2,30 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>All True Crime Cases</title>
 </head>
 
 <body>
 <img src="OfficialTCC.jpg">
-<img src="AllTrueCrimeCases.jpg"> <br>
-1947 Atlas (Marvel)<br>
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="OfficialTCC.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllTrueCrimeCases.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+1947 <a href="../AtlasComics/AtlasComics.html">Atlas Comics</a> (Marvel)
 <p>
 It starts with Sub Mariner comics #1-23 then splits adding Official True Crime Cases #24-25, the becomes All True Crime Cases #26-36 and drops the cases with <a href="../AllTrueCrime/AllTrueCrime.html">All True Crime #37</a>. 
 </p><p>
