--- a/Atlas/Atlas.html
+++ b/Atlas/Atlas.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Atlas</title>
 </head>
 
 <body>
-<img src="Atlas.jpg"> <br>
+<img src="Atlas.jpg">
+<p>
 4 issues 1994 Dark Horse<br>
 Writer and illustrator: Bruce Zick
 <p>
