Atlas Seaboard slides

--- a/AtlasSeaboard/AtlasSeaboard.html
+++ b/AtlasSeaboard/AtlasSeaboard.html
@@ -17,7 +17,29 @@ Founded by Martin Goodman from 1974 - 1975
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="../Barbarians/Barbarians.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../BlazingBattleTales/BlazingBattleTales.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Brute/Brute1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Cougar/Cougar1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../DemonHunter/DemonHunter1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Destructor/Destructor1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Fright/Fright.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../GrimGhost/GrimGhost1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../HandsOfTheDragon/HandsOfTheDragon1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Ironjaw/Ironjaw1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Morlock2001/Morlock2001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Phoenix/Phoenix1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../PlanetOfVampires/PlanetOfVampires1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../PoliceActionAtlas/PoliceActionAtlas1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../SavageCombatTales/SavageCombatTales1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Scorpion/Scorpion1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../TalesOfEvil/TalesOfEvil1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Targitt/Targitt1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Tigerman/Tigerman1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Vicki/Vicki1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WeirdSuspense/WeirdSuspense1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WesternAction/WesternAction1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WulfTheBarbarian/Wulf1.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -45,7 +67,7 @@ Comics
 <li><a href="../Phoenix/Phoenix.html">Phoenix</a> (4 issues; last issue retitled Phoenix...The Protector)
 <li><a href="../PlanetOfVampires/PlanetOfVampires.html">Planet of Vampires</a> (3 issues)
 <li><a href="../PoliceActionAtlas/PoliceActionAtlas.html">Police Action</a> featuring Lomax and Luke Malone (3 issues)
- <li><a href="../SavageCombatTales/SavageCombatTales.html">Savage Combat Tales</a> featuring Sgt. Stryker's Death Squad (3 issues)
+<li><a href="../SavageCombatTales/SavageCombatTales.html">Savage Combat Tales</a> featuring Sgt. Stryker's Death Squad (3 issues)
 <li><a href="../Scorpion/Scorpion.html">The Scorpion</a> (3 issues)
 <li><a href="../TalesOfEvil/TalesOfEvil.html">Tales of Evil</a> (3 issues; the Bog Beast in #2, Man-Monster and the Bog Beast in #3)
 <li><a href="../Targitt/Targitt.html">Targitt</a> (3 issues; #2 retitled as John Targitt...Man Stalker on cover)
