--- a/Alterna/Alterna.html
+++ b/Alterna/Alterna.html
@@ -35,12 +35,29 @@
 <div class="mySlides" style="text-align: center;"><img src="Alterna15.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Alterna16.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Alterna17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alterna34.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-http://alternacomics.com/
+<a href="http://alternacomics.com/">AlternaComics.com</a>
 </p><p>
 Titles
 </p><p>
