--- a/BlazingBattleTales/BlazingBattleTales.html
+++ b/BlazingBattleTales/BlazingBattleTales.html
@@ -4,28 +4,13 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>title</title>
+<title>Blazing Battle Tales</title>
 </head>
 
 <body>
-<img src=" "> <br>
-
+<img src="BlazingBattleTales.jpg">
 <p>
-<div class="row"><div class="column">
-<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
-</div> </div>
-
-<div id="myModal" class="modal">
-<span class="close cursor" onclick="closeModal()">&times;</span>
-<div class="modal-content">
-
-<div class="mySlides" style="text-align: center;"><img src=" "></div>
-
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div></div>
-</p><p>
-
+1 issue in 1975 by Atlas Seaboard, featuring Sgt. Hawk
 </p>
 </body>
 </html>
