New American Library

--- a/Creepshow/Creepshow.html
+++ b/Creepshow/Creepshow.html
@@ -9,8 +9,8 @@
 
 <body>
 <img src="CreepshowMovie.jpg"> <br>
-Series: 3 movies (1982, 1987, 2007), 1 graphic novel (1982)<br>
-Publisher: Warner Brothers, Penguin<br>
+3 movies (1982, 1987, 2007), 1 graphic novel (1982)<br>
+Publisher: <a href="../WarnerBros/WarnerBros.html">Warner Brothers</a>, <a href="../NewAmericanLibrary/NewAmericanLibrary.html">New American Library</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
