--- a/RandomHouse/RandomHouse.html
+++ b/RandomHouse/RandomHouse.html
@@ -36,6 +36,8 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
+Random House has merged with Pengiun, Ballantine, Crown, Bantam, Doubleday, <a href="../Dell/Dell.html">Dell</a>, Knopf,  Bertelsmann, Pearson, New American Library.
+</p><p>
 <a href="http://www.randomhouse.com">Random House</a> was founded in 1927 by Bennett Cerf and Donald Klopfer, two years after they acquired the Modern Library imprint from publisher Horace Liveright, which reprints classic works of literature. Cerf is quoted as saying, "We just said we were going to publish a few books on the side at random," which suggested the name Random House.
 </p><p>
 American publishers Alfred A. Knopf, Inc. and Pantheon Books were acquired by Random House in 1960 and 1961, respectively; works continue to be published under these imprints with editorial independence.
