--- a/index.html
+++ b/index.html
@@ -20498,7 +20498,7 @@
 <tr>
 <td>Creepshow</td>
 <td>1982</td>
-<td>Penguin Books</td>
+<td>New American Library</td>
 <td><a href="Creepshow/Creepshow.html">Details</a></td>
 </tr>
 
@@ -31503,7 +31503,7 @@
 <tr>
 <td>Fish Tales Publishing</td>
 <td>1992</td>
-<td>Publishers</td>
+<td>Publisher</td>
 <td><a href="FishTalesPublishing/FishTalesPublishing.html">Details</a></td>
 
 <tr>
@@ -54679,6 +54679,13 @@
 </tr>
 
 <tr>
+<td>New American Library</td>
+<td>1948</td>
+<td>Publisher</td>
+<td><a href="NewAmericanLibrary/NewAmericanLibrary.html">Details</a></td>
+</tr>
+
+<tr>
 <td>New Avengers</td>
 <td>2005</td>
 <td>Marvel</td>
@@ -57961,6 +57968,13 @@
 </tr>
 
 <tr>
+<td>Pengiun Books</td>
+<td>1927</td>
+<td>Publisher</td>
+<td><a href="RandomHouse/RandomHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pengiuns Of Madagascar</td>
 <td>2010</td>
 <td>Ape</td>
@@ -60276,7 +60290,7 @@
 <tr>
 <td>Puck</td>
 <td>1871</td>
-<td>Puck Publishing</td>
+<td>Publisher</td>
 <td><a href="Puck/Puck.html">Details</a></td>
 </tr>
 
@@ -60899,7 +60913,7 @@
 <tr>
 <td>Random House</td>
 <td>1927</td>
-<td>Publishers</td>
+<td>Publisher</td>
 <td><a href="RandomHouse/RandomHouse.html">Details</a></td>
 </tr>
 
@@ -67285,7 +67299,7 @@
 <tr>
 <td>Slave Labor Graphics (SLG)</td>
 <td>1986</td>
-<td>Publishers</td>
+<td>Publisher</td>
 <td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
 </tr>
 
