New American Library

--- a/NewAmericanLibrary/NewAmericanLibrary.html
+++ b/NewAmericanLibrary/NewAmericanLibrary.html
@@ -19,6 +19,19 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewAmericanLibrary14.jpg"></div>
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -33,16 +46,16 @@ Comic Titles
 <li><a href="NewAmericanLibrary2.jpg">Agatha Crumm</a>  	1980
 <li><a href="NewAmericanLibrary3.jpg">Agatha Crumm: Too Much Is Never Enough</a>  	1982
 <li><a href="NewAmericanLibrary4.jpg">Al Jaffee Blows a Fuse</a>  	1980
-<li>Al Jaffee Blows His Mind  	1975
-<li>Al Jaffee Bombs Again  	1978
-<li>Al Jaffee Dead Or Alive  	1980
-<li>Al Jaffee Draws a Crowd  	1978
-<li>Al Jaffee Fowls His Nest  	1981
-<li>Al Jaffee Gags  	1974
-<li>Al Jaffee Gags Again  	1975
-<li>Al Jaffee Gets His Just Desserts  	1980
-<li>Al Jaffee Goes Bananas  	1982
-<li>Al Jaffee Hogs the Show  	1981
+<li><a href="NewAmericanLibrary5.jpg">Al Jaffee Blows His Mind</a>  	1975
+<li><a href="NewAmericanLibrary6.jpg">Al Jaffee Bombs Again</a>  	1978
+<li><a href="NewAmericanLibrary7.jpg">Al Jaffee Dead Or Alive</a>  	1980
+<li><a href="NewAmericanLibrary8.jpg">Al Jaffee Draws a Crowd</a>  	1978
+<li><a href="NewAmericanLibrary9.jpg">Al Jaffee Fowls His Nest</a>  	1981
+<li><a href="NewAmericanLibrary10.jpg">Al Jaffee Gags</a>  	1974
+<li><a href="NewAmericanLibrary11.jpg">Al Jaffee Gags Again</a>  	1975
+<li><a href="NewAmericanLibrary12.jpg">Al Jaffee Gets His Just Desserts</a>  	1980
+<li><a href="NewAmericanLibrary13.jpg">Al Jaffee Goes Bananas</a>  	1982
+<li><a href="NewAmericanLibrary14.jpg">Al Jaffee Hogs the Show</a>  	1981
 <li>Al Jaffee Meets His End  	1979
 <li>Al Jaffee Meets Willie Weirdie  	1981
 <li>Al Jaffee Rotten Rhymes and Other Crimes  	1978
