--- a/index.html
+++ b/index.html
@@ -77120,6 +77120,13 @@
 </tr>
 
 <tr>
+<td>Warner Books</td>
+<td>1923</td>
+<td>Publisher</td>
+<td><a href="WarnerBooks/WarnerBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Warner Bros</td>
 <td>1923</td>
 <td>Publisher</td>
