--- a/WarnerBooks/WarnerBooks.html
+++ b/WarnerBooks/WarnerBooks.html
@@ -19,7 +19,18 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="WarnerBooks1.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks13.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -29,119 +40,119 @@ Warner Books is now owned by Hachette Book Group (HBG), a publishing company own
 </p><p>
 Titles
 </p><p>
-<li><a href="WarnerBooks1.jpg">Mad: The Abominable Snow Mad</a>  	1979
-<li>Mad: The Ages of Mad  	1990
-<li>Mad: The Aimless Mad  	1990
+<li><a href="WarnerBooks1.jpg">Batman: Arkham Asylum</a>  	1990
+<li><a href="WarnerBooks2.jpg">BatMan: Batman vs. The Incredible Hulk</a>  	1982
+<li><a href="WarnerBooks3.jpg">Batman: Gothic</a>  	1992
+<li><a href="WarnerBooks4.jpg">Batman: Prey</a>  	1992
+<li><a href="WarnerBooks5.jpg">Batman: Shaman</a>  	1993
+<li><a href="WarnerBooks6.jpg">Batman: Tales of the Demon</a>  	1992
+<li><a href="WarnerBooks7.jpg">Batman: The Dark Knight Returns</a> 	1986
+<li><a href="WarnerBooks8.jpg">Batman: The Greatest Batman Stories Ever Told</a>  	1989
+<li><a href="WarnerBooks9.jpg">Batman: The Greatest Joker Stories Ever Told</a>  	1989
+<li><a href="WarnerBooks10.jpg">Batman: Year One</a>  	1988
+<li><a href="WarnerBooks11.jpg">Camelot 3000</a>  	1988
+<li><a href="WarnerBooks12.jpg">Catwoman: Her Sister's Keeper</a>  	1992
+<li><a href="WarnerBooks13.jpg">Dita in the Chelsea Girl</a> 	1992
+<li>Duck Edwing's Mad Ventures of Almost Superheroes  	1990
+<li>Encyclopedia of Comic Book Heroes  	1976
+<li>Enemy Ace: War Idyll  	1992
+<li>Fish Police  	1987
+<li>Hellblazer: Original Sins  	1993
+<li>Looney Tunes 	1996
+<li>Mad: A Mad Carnival  	1982
+<li>Mad: A Mad Guide to Leisure Time  	1976
+<li>Mad: A Mad Look at Old Movies  	1973
+<li>Mad: A Mad Look at TV  	1976
+<li>Mad: A Mad Scramble  	1977
+<li>Mad: A Mad Treasure Chest  	1978
 <li>Mad: Al Jaffee's Mad (Yecch!) Monstrosities  	1974
 <li>Mad: Al Jaffee's Mad (Yeech!) Rejects  	1990
 <li>Mad: Al Jaffee's Mad Book of Magic and Other Dirty Tricks  	1976
 <li>Mad: Al Jaffee's Mad Inventions  	1978
-<li>Mad: The All New Mad Secret File on Spy vs. Spy  	1973
-<li>Batman: Arkham Asylum  	1990
-<li>Batman vs. The Incredible Hulk  	1982
-<li>Batman: Gothic  	1992
-<li>Batman: Prey  	1992
-<li>Batman: Shaman  	1993
-<li>Batman: Tales of the Demon  	1992
-<li>Batman: The Dark Knight Returns 	1986
-<li>Batman: Year One  	1988
-<li>Mad: The Bedside Mad  	1973
 <li>Mad: Boiling Mad  	1973
 <li>Mad: Burning Mad  	1975
-<li>Camelot 3000  	1988
-<li>Catwoman: Her Sister's Keeper  	1992
+<li>Mad: Dave Berg Looks Around  	1975
+<li>Mad: Dave Berg Looks at Living  	1973
+<li>Mad: Dave Berg Looks at People  	1973
+<li>Mad: Dave Berg Looks at the U.S.A.  	1977
+<li>Mad: Dave Berg Looks, Listens and Laughs  	1979
+<li>Mad: Dave Berg Takes a Loving Look  	1977
+<li>Mad: Dave Berg's Mad Trash  	1977
+<li>Mad: Don Martin Carries On  	1973
+<li>Mad: Don Martin Digs Deeper  	1979
+<li>Mad: Don Martin Drops 13 Stories!  	1973
+<li>Mad: Don Martin Forges Ahead  	1977
+<li>Mad: Don Martin Steps Further Out  	1975
+<li>Mad: Dr. Jekyll and Mr. Mad  	1975
+<li>Mad: Eternally Mad  	1983
+<li>Mad: Fighting Mad  	    1974
+<li>Mad: History Gone Mad  	1977
+<li>Mad: Hooked on Mad  	1976
+<li>Mad: Incurably Mad!  	1977
+<li>Mad: Mad About Sports  	1972
+<li>Mad: Mad As Usual!  	1990
+<li>Mad: Mad At You!  	    1975
+<li>Mad: Mad Clowns Around  1978
+<li>Mad: Mad Fold This Book! A Ridiculous Collection of Fold-Ins  	1997
+<li>Mad: Mad For Kicks  	1980
+<li>Mad: Mad Goes Wild  	1981
+<li>Mad: Mad In Orbit  	    1975
+<li>Mad: Mad Overboard  	1978
+<li>Mad: Mad Pantomimes  	1987
+<li>Mad: Mad Stew  	1978
+<li>Mad: Maddest Artist Don Martin Bounces Back!  	1976
+<li>Mad: Maddest Artist Don Martin Steps Out!  	1975
+<li>Mad: More Mad About Sports 	1977
+<li>Mad: More Mad Snappy Answers to Stupid Questions  	1990
+<li>Mad: Pumping Mad  	1981
+<li>Mad: Raving Mad  	1973
+<li>Mad: Sergio Aragonés Mad as a Hatter!  	1981
+<li>Mad: Sergio Aragonés Mad as the Devil!  	1975
+<li>Mad: Sergio Aragones Mad Menagerie  	1983
+<li>Mad: Sergio Aragones's Mad Marginals!  	1980
+<li>Mad: Sergio Aragonés on Parade  	1982
+<li>Mad: Shootin' Mad  	1979
+<li>Mad: Son of Mad  	1974
+<li>Mad: Steaming Mad  	1975
+<li>Mad: Super Mad  	1979
+<li>Mad: Swinging Mad  	1977
+<li>Mad: Viva Mad!  	1975
+<li>Mad: The Abominable Snow Mad</a>  	1979
+<li>Mad: The Ages of Mad  	1990
+<li>Mad: The Aimless Mad  	1990
+<li>Mad: The All New Mad Secret File on Spy vs. Spy  	1973
+<li>Mad: The Bedside Mad  	1973
 <li>Mad: The Completely Mad Don Martin  	1974
 <li>Mad: The Cuckoo Mad  	1976
-<li>Mad: Dave Berg's Mad Trash  	1977
-<li>Dita in the Chelsea Girl 	1992
-<li>Mad: Don Martin Drops 13 Stories!  	1973
-<li>Mad: Dr. Jekyll and Mr. Mad  	1975
-<li>Duck Edwing's Mad Ventures of Almost Superheroes  	1990
-<li>The Encyclopedia of Comic Book Heroes  	1976
-<li>Enemy Ace: War Idyll  	1992
-<li>Eternally Mad  	1983
 <li>Mad: The Fifth Mad Report on Spy vs. Spy  	1978
-<li>Mad: Fighting Mad  	1974
-<li>Mad: Fighting Mad  	1976
-<li>The Fish Police  	1987
 <li>Mad: The Fourth Mad Declassified Papers on Spy vs. Spy  	1974
-<li>The Greatest Batman Stories Ever Told  	1989
-<li>The Greatest Joker Stories Ever Told  	1989
-<li>Hellblazer: Original Sins  	1993
-<li>History Gone Mad  	1977
-<li>Mad: Hooked on Mad  	1976 	1 issues (0 indexed) 	Gallery 	June 1976
-<li>Mad: Incurably Mad!  	1977 	4 issues (0 indexed) 	Have 2 (Need 3) 	March 1977 - September 1985
-<li>Mad: The Invisible Mad  	1974 	1 issues (0 indexed) 	Add 	1974
-<li>Looney Tunes 	1996 	1 issues (1 indexed) 	Add 	1996
-<li>Mad: Mad About Sports  	1972 	1 issues (0 indexed) 	Gallery 	November 1972
-<li>Mad: The Mad Adventures of Captain Klutz  	1974 	1 issues (1 indexed) 	Gallery 	1974
-<li>Mad: Mad As Usual!  	1990 	1 issues (1 indexed) 	Add 	May 1990
-<li>Mad: Mad At You!  	1975 	1 issues (0 indexed) 	Gallery 	1975
-<li>Mad: A Mad Carnival  	1982 	1 issues (1 indexed) 	Gallery 	February 1982
-<li>Mad: Mad Clowns Around  	1978 	1 issues (1 indexed) 	Gallery 	June 1978
-<li>Mad: Mad Fold This Book! A Ridiculous Collection of Fold-Ins  	1997 	1 issues (0 indexed) 	Gallery 	October 1997
-<li>Mad: Mad For Kicks  	1980 	1 issues (1 indexed) 	Gallery 	June 1980
-<li>Mad: Mad Goes Wild  	1981 	1 issues (1 indexed) 	Add 	April 1981
-<li>Mad: The Mad Guide to Careers  	1978 	1 issues (0 indexed) 	Gallery 	September 1978
-<li>Mad: A Mad Guide to Leisure Time  	1976 	4 issues (1 indexed) 	Have 1 (Need 3) 	September 1976 - Circa 1988
-<li>Mad: Mad in Orbit  	1975 	3 issues (0 indexed) 	Have 1 (Need 2) 	November 1975 - July 1981
-<li>Mad: A Mad Look at Old Movies  	1973 	2 issues (0 indexed) 	Have 1 (Need 1) 	October 1973 - April 1980
-<li>Mad: A Mad Look at TV  	1976 	2 issues (0 indexed) 	Have 1 (Need 1) 	July 1976 - July 1980
-<li>Mad: Mad Overboard  	1978 	1 issues (0 indexed) 	Have 1 (Need 1) 	February 1978
-<li>Mad: Mad Pantomimes  	1987 	1 issues (1 indexed) 	Add 	January 1987
-<li>Mad: The Mad Pet Book  	1983 	1 issues (1 indexed) 	Have 1 (Need 1) 	July 1983
-<li>Mad: A Mad Scramble  	1977 	1 issues (0 indexed) 	Gallery 	1977
-<li>Mad: Mad Stew  	1978 	2 issues (1 indexed) 	Gallery 	January 1978 - January 1978
-<li>Mad: A Mad Treasure Chest  	1978 	1 issues (0 indexed) 	Gallery 	1978
-<li>Mad: The Mad Weirdo Watcher's Guide  	1982 	1 issues (1 indexed) 	Gallery 	July 1982
-<li>Mad: Dave Berg Looks Around  	1975 	5 issues (1 indexed) 	Have 1 (Need 4) 	November 1975 - 1982
-<li>Mad: Dave Berg Looks at Living  	1973 	1 issues (0 indexed) 	Gallery 	November 1973
-<li>Mad: Dave Berg Looks at People  	1973 	1 issues (0 indexed) 	Have 1 (Need 1) 	August 1973
-<li>Mad: Dave Berg Looks at the U.S.A.  	1977 	1 issues (0 indexed) 	Gallery 	April 1977
-<li>Mad: Dave Berg Looks, Listens and Laughs  	1979 	1 issues (1 indexed) 	Have 1 (Need 1) 	1979
-<li>Mad: Dave Berg Takes a Loving Look  	1977 	1 issues (0 indexed) 	Gallery 	1977
-<li>Mad: Don Martin Carries On  	1973 	3 issues (3 indexed) 	Gallery 	July 1973 - [circa 1978]
-<li>Mad: Don Martin Digs Deeper  	1979 	2 issues (1 indexed) 	Gallery 	August 1979 - [October 1983]
-<li>Mad: Don Martin Forges Ahead  	1977 	1 issues (1 indexed) 	Gallery 	1977
-<li>Mad: Don Martin Steps Further Out  	1975 	1 issues (1 indexed) 	Gallery 	July 1975
-<li>Mad: Maddest Artist Don Martin Bounces Back!  	1976 	5 issues (1 indexed) 	Have 1 (Need 4) 	November 1976 - June 1987
-<li>Mad: Maddest Artist Don Martin Steps Out!  	1975 	2 issues (1 indexed) 	Have 2 (Need 2) 	April 1975 - [circa 1981]
-<li>Mad: Sergio Aragonés on Parade  	1982 	1 issues (1 indexed) 	Gallery 	September 1982
-<li>Mad: The Medicine Mad  	1977 	1 issues (0 indexed) 	Gallery 	1977
-<li>Mad: More Mad About Sports [Frank Jacobs Series]  	1977 	3 issues (0 indexed) 	Have 1 (Need 2) 	January 1977 - December 1988
-<li>Mad: More Mad Snappy Answers to Stupid Questions  	1990 	1 issues (1 indexed) 	Gallery 	July 1990
-<li>Mad: The Organization Mad  	1973 	4 issues (0 indexed) 	Add 	July 1973 - August 1979
-<li>Mad: The Plaid Mad  	1985 	1 issues (0 indexed) 	Add 	June 1985
-<li>Mad: The Pocket Mad  	1974 	1 issues (0 indexed) 	Gallery 	1974
-<li>The Prisoner  	1991 	1 issues (0 indexed) 	Add 	1991
-<li>Mad: Pumping Mad  	1981 	1 issues (0 indexed) 	Gallery 	February 1981
-<li>Mad: Raving Mad  	1973 	1 issues (0 indexed) 	Gallery 	October 1974
-<li>The Return of Mister X 	1987 	1 issues (1 indexed) 	Gallery 	December 1987
-<li>Saga of the Swamp Thing  	1987 	1 issues (0 indexed) 	Gallery 	1987
-<li>The Sandman: Preludes & Nocturnes  	1991 	1 issues (0 indexed) 	Add 	1991
-<li>Mad: Sergio Aragonés Mad as a Hatter!  	1981 	3 issues (1 indexed) 	Have 1 (Need 2) 	January 1981 - 1987
-<li>Mad: Sergio Aragonés Mad as the Devil!  	1975 	1 issues (0 indexed) 	Gallery 	March 1975
-<li>Mad: Sergio Aragones Mad Menagerie  	1983 	1 issues (1 indexed) 	Have 1 (Need 1) 	April 1983
-<li>Mad: Sergio Aragones's Mad Marginals!  	1980 	1 issues (0 indexed) 	Add 	December 1980
-<li>Mad: Shootin' Mad  	1979 	2 issues (1 indexed) 	Have 2 (Need 1) 	January 1979 - ?
-<li>Mad: The Sixth Mad Case Book on Spy vs. Spy  	1982 	1 issues (0 indexed) 	Gallery 	August 1982
-<li>Mad: Son of Mad  	1974 	4 issues (1 indexed) 	Have 1 (Need 3) 	January 1973 [January 1974] - [circa 1981]
-<li>Mad: Steaming Mad  	1975 	2 issues (2 indexed) 	Have 2 (Need 1) 	1975 - 1976
+<li>Mad: The Invisible Mad  	1974
+<li>Mad: The Mad Adventures of Captain Klutz  	1974
+<li>Mad: The Mad Guide to Careers  	1978
+<li>Mad: The Mad Pet Book  	1983
+<li>Mad: The Mad Weirdo Watcher's Guide  	1982
+<li>Mad: The Medicine Mad  	1977
+<li>Mad: The Organization Mad  	1973
+<li>Mad: The Plaid Mad  	1985
+<li>Mad: The Pocket Mad  	1974
+<li>Mad: The Sixth Mad Case Book on Spy vs. Spy  	1982
+<li>Mad: The Third Mad Dossier of Spy vs. Spy  	1972
+<li>Mad: The Vintage Mad  	1976
+<li>Mad: The Voodoo Mad  	1976
+<li>Mad: Three Ring Mad  	1977
+<li>Prisoner  	1991
+<li>Return of Mister X 	1987
+<li>Saga of the Swamp Thing  	1987
+<li>Sandman: Preludes & Nocturnes  	1991
 <li>Super A  	1977
 <li>Super AA  	1978
 <li>Super B  	1977
 <li>Super BB  	1978
-<li>Super Mad  	1979
 <li>Superman and Spider-Man  	1981
 <li>Swamp Thing: Love & Death  	1990
-<li>Mad: Swinging Mad  	1977
-<li>Mad: The Third Mad Dossier of Spy vs. Spy  	1972
-<li>Mad: Three Ring Mad  	1977
 <li>V for Vendetta  	1990
-<li>Mad: The Vintage Mad  	1976
-<li>Mad: Viva Mad!  	1975
-<li>Mad: The Voodoo Mad  	1976
 <li>Watchmen  	1987
+
 </p>
 
 </body>
